# VN-Presence

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  proc_stat_fields.md
src/: config.hpp  ignore_list.cpp  ignore_list.hpp  logger.hpp  lutris_db.cpp  lutris_db.hpp  main.cpp  process_scanner.cpp  process_scanner.hpp  rpc_manager.cpp  rpc_manager.hpp  steam_detector.cpp  steam_detector.hpp  vn_cache.cpp  vn_cache.hpp  vndb_client.cpp  vndb_client.hpp
